Adding new testing samples

--- a/test/Syntax/ERB/application.rhtml
+++ b/test/Syntax/ERB/application.rhtml
@@ -1,119 +1,2 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <%= stylesheet_link_tag 'default' %>
-        <%= javascript_include_tag "prototype" %>
-        <%= javascript_include_tag "effects" %>
-        <%= javascript_include_tag "dragdrop" %>
-        <%= javascript_include_tag "controls" %>
-        <%= javascript_include_tag "behaviour" %>
-        <%= javascript_include_tag "DW" %>
-        <script type="text/javascript">
-        /* <![CDATA[ */
-        var global_rules = {
-          '#quick_find' : function (element) {
-            element.onkeydown = function(event) {
-              if (event.keyCode == Event.KEY_RETURN) {
-                Event.stop(event);
-                if (this.value.match(/[^0-9]/))
-                  window.location = '<%= url_for :controller => 'insider', :action => 'issue', :string_id => '' -%>' + this.value;
-                else
-                  window.location = '<%= 
-                  if @project
-                    project_key = @project.project_key
-                  elsif @issue
-                    project_key = @issue.project.project_key
-                  end
-                  url_for :controller => 'insider', :action => 'issue', :string_id => project_key -%>-' + this.value;
-                end
-              }
-            }
-          }
-        }
+<script type="text/javascript">  '<%=  ddd %>ddsdssdddddddsdaspmsdopmsadpomsadpmodsaposadmopsdamsdpaomsadopmsadpomasmsapsadmposadmposadmasdposadmpsaodmsadposmad'
 
-        Behaviour.register(global_rules);
-        /* ]]> */
-        </script>
-
-        <style type="text/css">
-          #floatright {
-            float: right;
-          }
-        </style>
-        <title>Bugshelf<%= ' - '+ @page_title if @page_title %></title>
-    </head>
-<body>
-<div id="heading">
-<span id="floatright">
-<% if session['login'] -%>
-  <%= display_user_picture(@user, :width => '16', :style => 'float:left; margin: 1px 5px 0px 0px;') -%>
-  <%= h @user.full_string(true) -%>
-  <% if @user.insider? -%>
-  |
-  <input id="quick_find" type="text" size="8" />
-  <% end -%>
-  |
-  <%= link_to 'Settings', :controller => 'reporter', :action => 'user_settings' -%>
-  |
-  <%= link_to 'Logout', :controller=>'public', :action=>'logout' %>
-<% elsif params[:action] != 'index' -%>
-  <%= link_to 'Login', :controller => 'public', :action=>'index' %>
-<% end -%>
-</span>
-  <%= link_to '<h1>Bugshelf</h1>', :controller => 'public', :action => 'index' -%>
-  <%= @page_title if @page_title %>
-</div>
-<% if session['login'] && @user.insider? -%>
-<div id="navi_insider" class="navigation">
-  <div id="navi_admin">
-    <ul class="inline-list">
-      <%= tab 'Projects',       :controller => 'admin',   :action => 'list_projects' -%>               
-      <%= tab 'Users',          :controller => 'admin',   :action => 'list_users' -%>                  
-    </ul>
-  </div>
-  <ul class="inline-list">
-    <%= tab 'Project Overview', :controller => 'insider', :action => 'index' -%>
-    <% for project in Project.find(:all).sort{|a,b| a.project_key <=> b.project_key} %>
-    <%= tab(project.project_key, {:controller => 'insider', :action => 'project', :project_key => project.project_key}, :additional_parameters_to_check => [:project_key], :icon => project_image(project, :width => 16)) %>
-    <% end %>
-  </ul>
-</div>
-<% end -%>
-
-<% if session['login'] && !@user.insider? -%>
-<div id="navi_reporter" class="navigation">
-  <ul class="inline-list">
-    <%= tab 'Issues', :controller => 'reporter', :action => 'index' -%>
-  </ul>
-</div>
-<% end -%>
-<div id="main">
-  <div id="content">
-    <div style="width:100%; padding: 0; margin: 0;">
-    <% if flash[:note] -%>
-      <div id="flash_note">
-        <%= h flash[:note] %>
-        <script type="text/javascript">setTimeout('new Effect.Fade(\'flash_note\')', 10000);</script> 
-      </div>
-    <% end -%>
-    <% if flash[:error] -%>
-      <div id="flash_error">
-        <%= h flash[:error] %>
-      </div>
-    <% end -%>
-    <%= @content_for_layout %>
-    </div>
-  </div>
-  
-  <br style="clear:both;" />
-
-</div>
-  <br />
-  <br />
-<div class="footer">
-  ©2006 by <a href="http://scrap.dasgenie.com/" class="bright_link">Dominik Wagner</a> | <a href="mailto:bugshelf@dasgenie.com?subject=BugShelf%20Feedback" class="bright_link">Feedback</a>
-</div>
-  <br />
-</body>
-</html>
