- fixed ruby mode problems with for in do statements - fixed regular expresseion problems in ruby - added some urls in the comments of the test files for testing

--- a/subethaedit/SubEthaPerf/Resources/TestFiles/1uom3yh8tp7o4so4.pkg.css
+++ b/subethaedit/SubEthaPerf/Resources/TestFiles/1uom3yh8tp7o4so4.pkg.css
@@ -4,7 +4,7 @@
 /*       Source:  Backing Store                                                */
 /*     Location:  css/1uom3yh8tp7o4so4.pkg.css h:cwx5p9hf                      */
 /*       Locale:  en_US                                                        */
-/*         Path:  css/1uom3yh8tp7o4so4.pkg.css                                 */
+/*         Path:  css/1uom3yh8tp7o4so4.pkg.css    www.apple.com                             */
 
 
 html{height:100%;}
