--- a/subethaedit/SubEthaPerf/Resources/TestFiles/coda.css
+++ b/subethaedit/SubEthaPerf/Resources/TestFiles/coda.css
@@ -50,7 +50,7 @@ body {
 		height: 65px;
 		}
 	
-/* End Super-Top-Secret-Left-Hangy-Not-Centered-Taggy-Thing Technique, copyright © 2007 by Panic Industries.  No rights reserved.  */
+/* End Super-Top-Secret-Left-Hangy-Not-Centered-Taggy-Thing Technique, copyright © 2007 by Panic Industries.  No rights reserved. www.apple.com  */
 
 
 em, q {
