[FIX] fixed minor hilighting issues in erb mode

--- a/SubEthaEdit-Mac/Documentation/ModeDevelopment/Reference Files/ERB/spell_check.rhtml
+++ b/SubEthaEdit-Mac/Documentation/ModeDevelopment/Reference Files/ERB/spell_check.rhtml
@@ -1,6 +1,9 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" foo="<% @bar %>"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" foo="<% @bar %>" bar="zwar">
+	asdfasdf
+</meta>
 
 <%= stylesheet_link_tag "/javascripts/fckeditor/editor/dialog/fck_spellerpages/spellerpages/spellerStyle" %>
 <%= javascript_include_tag "fckeditor/editor/dialog/fck_spellerpages/spellerpages/wordWindow" %>
